--- a/docReja/Documentation.html
+++ b/docReja/Documentation.html
@@ -10532,7 +10532,7 @@ color:#1B8A4C'>Operational Note (2026-02-21): Backend Service Structure</span></
 
 <p class=MsoListParagraph style='margin-top:1.5pt;margin-right:0in;margin-bottom:
 2.5pt;margin-left:.5in;text-indent:-.25in'>•<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><span style='font-size:10.0pt;color:black'>Amalda qo'llangan modullar: auth, tenants, users, teachers, students, parents (service + repository + mapper/types).</span></p>
+</span><span style='font-size:10.0pt;color:black'>Amalda qo'llangan modullar: auth, tenants, users, teachers, students, parents, classes (service + repository + mapper/types).</span></p>
 
 <p class=MsoNormal style='margin-bottom:6.0pt'>&nbsp;</p>
 
