--- a/docReja/Documentation.html
+++ b/docReja/Documentation.html
@@ -10534,6 +10534,10 @@ color:#1B8A4C'>Operational Note (2026-02-21): Backend Service Structure</span></
 2.5pt;margin-left:.5in;text-indent:-.25in'>•<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span><span style='font-size:10.0pt;color:black'>Amalda qo'llangan modullar: auth, tenants, users, teachers, students, parents, classes, attendance (service + repository + mapper/types).</span></p>
 
+<p class=MsoListParagraph style='margin-top:1.5pt;margin-right:0in;margin-bottom:
+2.5pt;margin-left:.5in;text-indent:-.25in'>•<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span style='font-size:10.0pt;color:black'>Har bir subtaskdan oldin `docReja/Reja.md` va `docReja/Documentation.html` qayta o'qilib, acceptance mezonlari bo'yicha aniq qadamlar ro'yxati tuziladi.</span></p>
+
 <p class=MsoNormal style='margin-bottom:6.0pt'>&nbsp;</p>
 
 <table class=MsoNormalTable border=1 cellspacing=0 cellpadding=0 width=624
