docs(reja): record permify allow-deny integration evidence

--- a/docReja/Documentation.html
+++ b/docReja/Documentation.html
@@ -10548,6 +10548,10 @@ color:#1B8A4C'>Operational Note (2026-02-21): Backend Service Structure</span></
 2.5pt;margin-left:.5in;text-indent:-.25in'>•<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span><span style='font-size:10.0pt;color:black'>Permify PDP integratsiyasi uchun envlar backendga tegishli bo'lib, aniq joylashuv fayli: `apps/api/.env`; SDK gRPC endpoint envi sifatida `PERMIFY_GRPC_ENDPOINT` ishlatiladi (REST URL emas).</span></p>
 
+<p class=MsoListParagraph style='margin-top:1.5pt;margin-right:0in;margin-bottom:
+2.5pt;margin-left:.5in;text-indent:-.25in'>•<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span style='font-size:10.0pt;color:black'>Permify external PDP integration evidence (FAZA 2 / 2.6.3 &amp; 2.7.3, 2026-02-22): `relationships-write.sh` -> `snap_token` returned, `allow-test.sh` -> `CHECK_RESULT_ALLOWED`, `deny-test.sh` -> `CHECK_RESULT_DENIED` (tenant policy tuples + allow/deny check verified on Permify service).</span></p>
+
 <p class=MsoNormal style='margin-bottom:6.0pt'>&nbsp;</p>
 
 <table class=MsoNormalTable border=1 cellspacing=0 cellpadding=0 width=624
