feat(api): add exams module with results and statistics

--- a/docReja/Documentation.html
+++ b/docReja/Documentation.html
@@ -10572,6 +10572,8 @@ style='width:6.5in;margin-left:-.35pt;border-collapse:collapse;border:none'>
 
 <p class=MsoNormal>&nbsp;</p>
 
+<p class=MsoNormal><span style='font-size:10.0pt;color:black'>FAZA 2 implementation evidence update (2026-02-22): Grades Module (`2.11`) server smoke test passed for `GET /api/grades`, `GET /api/grades/report`, and `GET/POST/PATCH/DELETE /api/grades/scales`; validation wiring fixes were applied for `grades/scales` query/body Zod pipes. Exams Module (`2.12`) backend implementation added with tenant-safe exam CRUD, bulk exam results entry, results by exam/student, and exam statistics endpoints (`apps/api/src/modules/exams/*`, `packages/shared/src/validators/exam.schema.ts`).</span></p>
+
 </div>
 
 </body>
