--- a/docReja/Documentation.html
+++ b/docReja/Documentation.html
@@ -537,8 +537,16 @@ color:#1B8A4C'>1.3 Rollar Tizimi (4 Rol)</span></b></p>
   <td width=297 valign=top style='width:223.0pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   background:white;padding:4.0pt 6.0pt 4.0pt 6.0pt'>
-  <p class=MsoNormal style='margin-bottom:4.0pt'><span style='font-size:9.5pt;
+ <p class=MsoNormal style='margin-bottom:4.0pt'><span style='font-size:9.5pt;
   color:black'>Barcha maktablar, billing, tariflar</span></p>
+  </td>
+ </tr>
+ <tr>
+  <td colspan=3 valign=top style='border-top:none;border-left:solid windowtext 1.0pt;
+  border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  background:#FFF9E8;padding:4.0pt 6.0pt 4.0pt 6.0pt'>
+  <p class=MsoNormal style='margin-bottom:4.0pt'><span style='font-size:9.0pt;
+  color:#7A4E00'>Implementation note (2026-02-25): Platform super-admin (`platform_admin`) accountlari alohida `platform` tenant (`platform.talimy.space`) scope ichida saqlanadi. `platform_admin` bootstrap yaratish `POST /api/auth/register` orqali `role=platform_admin` + `AUTH_PLATFORM_ADMIN_BOOTSTRAP_KEY` bilan amalga oshiriladi; maktab adminlari (`school_admin`) esa o&#39;z tenantida saqlanadi.</span></p>
   </td>
  </tr>
  <tr>
