docs(calendar): sync backend events endpoint in documentation

--- a/docReja/Documentation.html
+++ b/docReja/Documentation.html
@@ -4506,7 +4506,7 @@ color:#1B8A4C'>7.5 API Endpointlar  (v3 6.4)</span></b></p>
   <td width=207 valign=top style='width:155.0pt;border:solid windowtext 1.0pt;
   border-top:none;background:white;padding:4.0pt 6.0pt 4.0pt 6.0pt'>
   <p class=MsoNormal style='margin-bottom:4.0pt'><span style='font-size:9.5pt;
-  color:black'>GET /api/admin/calendar/events</span></p>
+  color:black'>GET /api/events?tenantId=...&amp;dateFrom=...&amp;dateTo=...&amp;type=...&amp;page=1&amp;limit=20</span></p>
   </td>
   <td width=67 valign=top style='width:50.0pt;border-top:none;border-left:none;
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -4518,7 +4518,7 @@ color:#1B8A4C'>7.5 API Endpointlar  (v3 6.4)</span></b></p>
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   background:white;padding:4.0pt 6.0pt 4.0pt 6.0pt'>
   <p class=MsoNormal style='margin-bottom:4.0pt'><span style='font-size:9.5pt;
-  color:black'>Agenda list (upcoming 3)</span></p>
+  color:black'>Calendar events list (tenant-scoped, date range/type filters)</span></p>
   </td>
   <td width=77 valign=top style='width:58.0pt;border-top:none;border-left:none;
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
