--- a/docReja/Documentation.html
+++ b/docReja/Documentation.html
@@ -2484,7 +2484,7 @@ dashboard/  teachers/  students/</span></p>
 <p class=MsoNormal style='margin-top:0in;margin-right:15.0pt;margin-bottom:
 0in;margin-left:15.0pt;margin-bottom:.0001pt;background:whitesmoke'><span
 style='font-size:9.0pt;font-family:"Courier New";color:#333333'>│   ├──
-teacher/  student/  shared/  ui/ (shadcn)</span></p>
+teacher/  student/  shared/  (feature components), UI primitives: @talimy/ui (packages/ui)</span></p>
 
 <p class=MsoNormal style='margin-top:0in;margin-right:15.0pt;margin-bottom:
 0in;margin-left:15.0pt;margin-bottom:.0001pt;background:whitesmoke'><span
